# githublex

./: README.md  main.py  pyproject.toml
githublex/: __init__.py  auth.py  cli.py  installer.py  platform.py  release.py
