[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "githublex"
version = "0.1.1"
description = "Fast GitHub CLI setup and browser login for Colab, Ubuntu Jupyter, and Windows"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
authors = [{ name = "Alex Zyukov", email = "alexzyukov@users.noreply.github.com" }]
keywords = ["github", "gh", "cli", "colab", "jupyter", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/pymlex/githublex"
Repository = "https://github.com/pymlex/githublex"

[project.scripts]
githublex = "githublex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["githublex*"]
